--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:GpIJlY2Mu+w5ercsDfZu4v5SF2YO5Jmgkkp8o9ADwQM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,16 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=
 DB_USERNAME=root
 DB_PASSWORD=
+
+DB_CONNECTION_SSO=sso
+DB_HOST_SSO=
+DB_PORT_SSO=
+DB_DATABASE_SSO=
+DB_USERNAME_SSO=
+DB_PASSWORD_SSO=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
